<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="240dp"
    android:layout_width="170dp"
    android:layout_margin="10dp"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/ivRemoveProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="2dp">

                <TextView
                    android:id="@+id/tvNameRemoveProducts"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/productName"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tvPriceRemoveProducts"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/productPrice"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tvContactNumberRemoveProducts"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/productContactNumber"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnRemoveProducts"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="#BA0606"
                    android:text="@string/remove"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:textSize="12sp">

                </Button>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>