<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpActivity"
    android:background="@drawable/background_image_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSignUpActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Create Your Account"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#ffffff"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/back_button">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/ivRegProfilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_shape"
                android:src="@drawable/profile_picture"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/etRegName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/etRegContactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_name_call"
                android:hint="@string/productContactNumber"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:textColorHint="@color/colorAccent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/etRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_action_name_email"
                android:drawableStart="@drawable/ic_action_name_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/etRegHostelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hostel_name"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_shape"
            android:textColorHint="@color/colorAccent">

            <EditText
                android:id="@+id/etRegRoomNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/productRoomNumber"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            android:textColorHint="@color/colorAccent"
            android:background="@drawable/edittext_shape">

            <EditText
                android:id="@+id/etRegPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:drawableLeft="@drawable/ic_action_name_password"
                android:drawableStart="@drawable/ic_action_name_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#000000"
                android:textSize="22sp"
                android:background="@drawable/edittext_shape"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp">

            <TextView
                android:id="@+id/tvAlreadyHaveAnAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                android:textColor="#ff7700"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>