<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="5dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productPicBuy"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp">

        </ImageView>

        <TextView
            android:id="@+id/productNameBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productName"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#007700"
            android:textAlignment="center"
            android:gravity="center_horizontal">
        </TextView>

        <TextView
            android:id="@+id/productPriceBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productPrice"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18sp"
            android:drawableLeft="@drawable/rupee"
            android:drawableStart="@drawable/rupee"
            android:layout_marginLeft="55dp"
            android:layout_marginStart="55dp">
        </TextView>

        <TextView
            android:id="@+id/productContactNumberBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productContactNumber"
            android:textStyle="bold"
            android:textColor="#0000ff"
            android:drawableLeft="@drawable/ic_action_name_call"
            android:drawableStart="@drawable/ic_action_name_call"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp">
        </TextView>

    </LinearLayout>

</androidx.cardview.widget.CardView>